# opencl-kernel-project

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  branch_diff.txt
docs/: architecture.md
include/opencl_wrapper/: buffer.hpp  context.hpp  dispatch.hpp  example.cpp  pipeline.hpp  platform.hpp  program.hpp
include/parser/: ast.hpp  codegen.hpp  semantic_analyzer.hpp
include/runtime/: executor.hpp
src/: main.cpp
src/opencl_wrapper/: buffer.cpp  context.cpp  platform.cpp  program.cpp
src/parser/: ast.cpp  codegen.cpp  semantic_analyzer.cpp
src/runtime/: executor.cpp
